--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "@vscode/test-electron": "^2.2.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/emmeline2/Dyslexia.git"
   }
 }
