--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "dyslexiatheme",
-  "displayName": "DyslexiaTheme",
+  "displayName": "Dyslexia Theme",
   "description": "Designed to make reading code easier for people who are dyslexic. ",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.76.0"
   },
+  "icon": "icon.png", 
+  "author":{
+     "name": "Emmeline Pearson",
+     "url": "https://github.com/emmeline2"
+  },
   "categories": [
+    "Themes",
     "Other"
   ],
   "activationEvents": [],
@@ -48,6 +54,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/emmeline2/Dyslexia.git"
+    "url": "https://github.com/emmeline2/Dyslexia.git"
   }
 }
